[package]
name = "ganache"
version = "0.1.7"
authors = ["Darren Kaste <darrenkaste@gmail.com>"]
edition = "2018"
description = "A simple GUI library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dkaste/ganache"
documentation = "https://docs.rs/ganache"

[features]
scalar_i32 = []

[dependencies]
downcast-rs = "^1.0.4"

[dev-dependencies]
ggez = "^0.5.0-rc.2"
